# streamfox

./: .dockerignore  .gitignore  LICENSE  README.md  flake.nix
.github/workflows/: build.yml  dotnetcore.yml
Streamfox.Server/: BootstrappingExtensions.cs  HtmlOpenGraphMiddleware.cs  IFileSystemChecker.cs  IFileSystemManipulator.cs  IVideoClerk.cs  IVideoIdGenerator.cs  IVideoLoader.cs  IVideoSaver.cs  IVideoStream.cs  Optional.cs  Program.cs  RawByteStreamBodyFormatter.cs  SnowflakeVideoIdGenerator.cs  Startup.cs  StreamResult.cs  Streamfox.Server.csproj  VideoClerkFacade.cs  VideoController.cs  VideoDirectoryHandler.cs  VideoId.cs  VideoIdParameterFormatter.cs  VideoLoaderFromDisk.cs  VideoRetrievalClerk.cs  VideoSaverToDisk.cs  VideoStorageClerk.cs
Streamfox.Server.Tests/: Streamfox.Server.Tests.csproj  TestUtil.cs  TestUtils.cs
Streamfox.Server.Tests/Unit/: RawByteStreamBodyFormatterTest.cs  StreamResultTest.cs  VideoControllerTest.cs  VideoIdParameterFormatterTest.cs  VideoLoaderFromDiskTest.cs  VideoRetrievalClerkTest.cs  VideoSaverToDiskTest.cs  VideoStorageClerkTest.cs
Streamfox.Server/Controllers/: IClock.cs  IVideoViewQueries.cs  IViewIdGenerator.cs  OembedController.cs  VideoController.cs  ViewController.cs
Streamfox.Server/Migrations/: 20201108131537_VideosAndTags.cs
Streamfox.Server/Persistence/: DatabaseMetadataStore.cs  DirectoryHandler.cs  DiskMetadataStore.cs  DiskVideoLoader.cs  IFileReader.cs  (+20 more)
backend/: .env  .gitignore  BUILD  Cargo.toml  MODULE.bazel  Rocket.toml  go.mod  go.sum  main.go
backend-rs/: .env.toml  .gitignore  Cargo.toml  rustfmt.toml
backend-rs/backend/: Cargo.toml
backend-rs/backend/src/: config.rs  controllers.rs  main.rs
backend-rs/backend/src/controllers/: errors.rs
backend-rs/backend/src/models/: id.rs  user.rs
backend-rs/backend/src/models/migrations/: migrator.rs
backend-rs/entity/: Cargo.toml
backend-rs/entity/src/: id.rs  lib.rs  user.rs  video.rs  view.rs  watch.rs
backend-rs/fs/: Cargo.toml
backend-rs/fs-file/: Cargo.toml
backend-rs/fs-file/src/: lib.rs
backend-rs/fs/src/: lib.rs  parse_fs.rs
backend-rs/fs/tests/: integration_test.rs
backend-rs/migration/: Cargo.toml
backend-rs/migration/src/: lib.rs  m20240204_000001_users.rs  m20240218_000002_videos.rs  m20240218_000003_views.rs  m20240218_000004_watches.rs  migrator.rs
backend-rs/src/: app_state.rs  config.rs  controllers.rs  main.rs  models.rs
backend-rs/src/controllers/: errors.rs  user.rs  validate.rs
backend-rs/src/models/: base.rs  id.rs  migrations.rs  user.rs
backend-rs/src/models/migrations/: m20240204_000001_users.rs  migrator.rs
backend-rs/streamfox/: Cargo.toml
backend-rs/streamfox/src/: codec.rs  config.rs  controllers.rs  main.rs  models.rs  secure.rs  snowflake.rs
backend-rs/streamfox/src/controllers/: errors.rs  user.rs  video.rs
backend-rs/streamfox/src/models/: base.rs  migrations.rs  user.rs  video.rs  view.rs  watch.rs
backend-rs/streamfox/src/models/migrations/: m20240218_000002_videos.rs  m20240218_000003_views.rs  m20240218_000004_watches.rs  migrator.rs
backend/Streamfox.Server/: Startup.cs  Streamfox.Server.csproj
backend/Streamfox.Server.Tests/: TestUtils.cs
backend/Streamfox.Server.Tests/Acceptance/VideoHosting/: PartialResponse.cs
backend/Streamfox.Server.Tests/TestFiles/VideoMetadataExamples/: audio.json  h264.json
backend/Streamfox.Server.Tests/Unit/: ViewCounterTest.cs
backend/Streamfox.Server.Tests/Unit/Processing/: VideoVerifierTest.cs
backend/Streamfox.Server.Tests/Unit/VideoManagement/: VideoStorageClerkTest.cs
backend/Streamfox.Server.Tests/Unit/VideoProcessing/: VideoFinalizerTest.cs
backend/Streamfox.Server/Controllers/Responses/: VideoListResponse.cs
backend/Streamfox.Server/Persistence/: DiskMetadataStore.cs  DiskVideoLoader.cs  IIntermediateVideoPathResolver.cs  IThumbnailPathResolver.cs  VideoComponentExistenceCheckerFacade.cs
backend/Streamfox.Server/Persistence/Database/: Video.cs
backend/Streamfox.Server/Persistence/Operations/: IFileDeleter.cs  IFileReader.cs  IFileStreamWriter.cs
backend/Streamfox.Server/Processing/: BackgroundVideoConverter.cs  FormatConverter.cs  MetadataExtractor.cs  ProcessExtensions.cs  ThumbnailExtractor.cs  VideoVerifier.cs
backend/Streamfox.Server/Processing/Ffmpeg/: FfmpegProcessRunner.cs  FfmpegVideoMetadata.cs
backend/Streamfox.Server/Properties/: launchSettings.json
backend/Streamfox.Server/VideoManagement/: IVideoLoader.cs  IVideoProcessor.cs  VideoId.cs
backend/Streamfox.Server/VideoProcessing/: IIntermediateVideoDeleter.cs  IThumbnailExtractor.cs  IVideoComponentExistenceChecker.cs  IVideoOperationRunner.cs  IVideoVerifier.cs  VideoProcessor.cs
backend/codec/: BUILD.bazel  format.go  subtitles.go  thumbnail.go
backend/config/: config.go
backend/controllers/: BUILD.bazel  auth.go  authentication.go  content_range.go  deferred_response.go  errors.go  frontend.go  jwt.go  live.go  live_message.go  room.go  subtitle.go  token.go  user.go  utils.go  video.go
backend/e/: error_sink.go
backend/files/: BUILD.bazel  base.go  fs.go  setup.go  video.go
backend/live/: room_session.go  upload_session.go  webrtc.go
backend/middleware/: jwt.go
backend/models/: BUILD.bazel  base.go  generic.go  id.go  setup.go  subtitle.go  user.go  video.go  view.go  watch.go
backend/src/: main.rs  models.rs
backend/src/models/: base.rs  prelude.rs  users.rs  videos.rs  views.rs  watches.rs
backend/utils/: BUILD.bazel  env.go  envkey_string.go  format.go  strings.go  token.go
backend/utils/ffmpeg/: format.go  thumbnail.go
client/: .env.production  jest.config.js  package-lock.json  package.json  postcss.config.js  tsconfig.json  vue.config.js
docker/: devenv.yml
frontend/: .editorconfig  .env  .env.development  .env.production  .eslintrc.js  .eslintrc.json  .gitignore  .prettierrc.cjs  .prettierrc.json  index.html  jest.config.cjs  jest.tsconfig.json  package-lock.json  package.json  tailwind.config.cjs  tailwind.config.js  tsconfig.json  vite.config.ts  vue.config.js
nginx/: streamfox
server/: Streamfox.Server.sln
(+365 files in other folders)
