[package]
name = "streamfox_backend"
version = "0.0.0"
edition = "2021"

[dependencies]
axum = "0.7.4"
sea-orm = { version = "0.12.14", features = ["runtime-tokio-native-tls", "sqlx-postgres"] }
sea-orm-migration = "0.12.12"
serde = { version = "1.0.196", features = ["derive"] }
thiserror = "1.0.56"
tokio = { version = "1.36.0", features = ["rt-multi-thread"] }
toml-env = "1.1.1"
tower-http = { version = "0.5.1", features = ["trace"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
