[package]
name = "streamfox_backend"
version = "0.0.0"
edition = "2021"

[dependencies]
bcrypt = "0.15.0"
dotenv = "0.15.0"
jwt = "0.16.0"
lazy_static = "1.4.0"
once_cell = "1.18.0"
rocket = { version = "=0.5.0-rc.3", features = ["json"] }
sea-orm = { version = "0.12", features = [
  "sqlx-postgres",
  "runtime-tokio-rustls",
  "macros",
] }
serde = { version = "1.0.180", features = ["derive"] }
