bazel_dep(name = "rules_go", version = "0.44.0")
bazel_dep(name = "gazelle", version = "0.35.0")

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")

# All *direct* Go dependencies of the module have to be listed explicitly.
use_repo(
    go_deps,
    "com_github_abrander_ginproxy",
    "com_github_bwmarrin_snowflake",
    "com_github_dchest_uniuri",
    "com_github_gin_gonic_gin",
    "com_github_go_http_utils_headers",
    "com_github_go_playground_validator_v10",
    "com_github_golang_jwt_jwt_v5",
    "com_github_joho_godotenv",
    "com_github_ldez_mimetype",
    "in_gopkg_vansante_go_ffprobe_v2",
    "io_gorm_driver_postgres",
    "io_gorm_gorm",
    "org_golang_x_crypto",
)
