[package]
name = "streamfox_backend"
version = "0.0.0"
edition = "2021"

[dependencies]
axum = "0.7.4"
axum-extra = { version = "0.9.2", features = ["cookie"] }
base64 = "0.21.7"
bcrypt = "0.15.0"
bs58 = "0.5.0"
cascade = "1.0.1"
chrono = "0.4.33"
convert_case = "0.6.0"
fs = { version = "0.0.0", path = "../fs", default-features = false }
fs-file = { version = "0.0.0", path = "../fs-file", default-features = false }
jsonwebtoken = { version = "9.2.0", default-features = false }
lazy_static = "1.4.0"
ring = "0.17.7"
rs-snowflake = "0.6.0"
sea-orm = { version = "0.12.14", features = ["runtime-tokio-native-tls", "sqlx-postgres"] }
sea-orm-migration = "0.12.12"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
serde_with = { version = "3.6.0", features = ["chrono_0_4"] }
thiserror = "1.0.56"
time = "0.3.34"
tokio = { version = "1.36.0", features = ["rt-multi-thread"] }
toml-env = "1.1.1"
tower-http = { version = "0.5.1", features = ["trace"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
validator = { version = "0.16.1", features = ["derive"] }
