[package]
name = "streamfox"
version = "0.0.0"
edition = "2021"

[dependencies]
axum = "0.7.4"
axum-extra = { version = "0.9.2", features = ["cookie"] }
axum-range = { version = "0.4.0", default-features = false }
base64 = "0.21.7"
bcrypt = "0.15.0"
bs58 = { version = "0.5.0", default-features = false }
cascade = "1.0.1"
chrono = "0.4.33"
convert_case = "0.6.0"
entity = { version = "0.0.0", path = "../entity", default-features = false }
fs = { version = "0.0.0", path = "../fs", default-features = false }
fs-file = { version = "0.0.0", path = "../fs-file", default-features = false }
futures = { version = "0.3.30", default-features = false }
jsonwebtoken = { version = "9.2.0", default-features = false }
lazy_static = "1.4.0"
migration = { version = "0.0.0", path = "../migration", default-features = false }
mime = { version = "0.3.17", default-features = false }
ring = "0.17.7"
sea-orm = { version = "0.12.14", features = ["runtime-tokio-rustls", "sqlx-postgres", "debug-print"] }
sea-orm-migration = { version = "0.12.14", default-features = false }
serde = { version = "1.0.196", features = ["derive"] }
serde-this-or-that = { version = "0.4.2", default-features = false }
serde_json = "1.0.113"
serde_with = { version = "3.6.0", features = ["chrono_0_4"] }
thiserror = "1.0.56"
time = "0.3.34"
tokio = { version = "1.36.0", features = ["rt-multi-thread", "process"] }
tokio-util = { version = "0.7.10", default-features = false, features = ["io"] }
toml-env = "1.1.1"
tower-http = { version = "0.5.1", features = ["trace"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
validator = { version = "0.16.1", features = ["derive"] }
