load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "models",
    srcs = [
        "base.go",
        "generic.go",
        "id.go",
        "setup.go",
        "subtitle.go",
        "user.go",
        "video.go",
        "view.go",
        "watch.go",
    ],
    importpath = "streamfox-backend/models",
    visibility = ["//visibility:public"],
    deps = [
        "//files",
        "//utils",
        "@com_github_bwmarrin_snowflake//:snowflake",
        "@io_gorm_driver_postgres//:postgres",
        "@io_gorm_gorm//:gorm",
        "@org_golang_x_crypto//bcrypt",
    ],
)
